--- a/APPVIEW/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/APPVIEW/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -547,7 +547,8 @@
     <script src="~/contentadmin/assets/vendor/libs/node-waves/node-waves.js"></script>
     <script src="~/contentadmin/assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js"></script>
     <script src="~/contentadmin/assets/vendor/js/menu.js"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <!-- endbuild -->
     <!-- Vendors JS -->
     <script src="~/contentadmin/assets/vendor/libs/apex-charts/apexcharts.js"></script>
