--- a/APPVIEW/Views/Cart/ViewCart.cshtml
+++ b/APPVIEW/Views/Cart/ViewCart.cshtml
@@ -1,4 +1,5 @@
-﻿@model List<APPDATA.Models.ProductDetail>
+﻿@using System.Globalization;
+@model List<APPDATA.Models.ProductDetail>
 
 @{
     ViewData["Title"] = "ViewCart";
@@ -76,7 +77,7 @@
                                                 <td>
                                                     <div class="media">
                                                         <div class="d-flex">
-                                                            <img src="~/images/@img.Name" style="width: 90px;" alt="">
+                                                            <img src="~/images/@img.Name" style="width: 150px;" alt="">
                                                         </div>
                                                     </div>
                                                 </td>
@@ -84,7 +85,7 @@
                                             }
                                     }
                                         <td >@Model[i].Name</td>
-                                        <td >@Model[i].Price</td>
+                                    <td>@Model[i].Price.ToString("C0", new CultureInfo("vi-VN"))</td>
                                         <td>
                                          
                                             <div class="product_count">
@@ -130,7 +131,7 @@
                                             </select>
                                         </td>
                                         <td class="align-middle">
-                                            @tt
+                                            @tt.ToString("C0", new CultureInfo("vi-VN"))
                                         </td>
                                         <td>
                                             <a class="btn btn-light" href="@Url.ActionLink("DeleteCartItem","Cart",new{id=Model[i].Id})"><i class="fa fa-trash"></i></a>
@@ -160,7 +161,7 @@
                                 <h5>Subtotal</h5>
                             </td>
                             <td>
-                                <h5>$@ViewBag.tt</h5>
+                                <h5>$@ViewBag.tt.ToString("C0", new CultureInfo("vi-VN"))</h5>
                             </td>
                         </tr>
                      
