--- a/APPVIEW/Views/Shared/_LayoutWeb.cshtml
+++ b/APPVIEW/Views/Shared/_LayoutWeb.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@using _APPAPI.Service;
 ﻿@{
     var IdUser = ((System.Security.Claims.ClaimsIdentity)User.Identity).FindFirst("Id");
     string Id_userValue = IdUser?.Value;
@@ -32,8 +32,8 @@
     <link href="~/contentwebb/css/main.css" rel="stylesheet" />
 
 </head>
+
 <body>
-    
     <!--================ Start Header Menu Area =================-->
     <header class="header_area">
         <div class="main_menu">
@@ -54,7 +54,6 @@
                                    aria-expanded="false">Shop</a>
                                 <ul class="dropdown-menu">
                                     <li class="nav-item"><a class="nav-link" asp-action="Shop" asp-controller="Home">Shop Category</a></li>
-                            
                                     <li class="nav-item"><a class="nav-link" href="cart.html">Shopping Cart</a></li>
                                 </ul>
                             </li>
@@ -66,59 +65,68 @@
                                     <li class="nav-item"><a class="nav-link" href="single-blog.html">Blog Details</a></li>
                                 </ul>
                             </li>
-                           @* <li class="nav-item submenu dropdown">
-                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                                   aria-expanded="false">Pages</a>
-                                <ul class="dropdown-menu">
-                                    <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
-                                    <li class="nav-item"><a class="nav-link" href="register.html">Register</a></li>
-
-                                </ul>
-                            </li>*@
                             <li class="nav-item"><a class="nav-link" asp-action="Contact" asp-controller="Home">Contact</a></li>
                         </ul>
 
-                        <ul class="nav-shop">
 
-                            <li class="nav-item">
-                                <form asp-action="Shop" asp-controller="home">
 
+
+                    </div>
+                    <div style="display: flex; align-items: center; justify-content: space-between;">
+                        <ul class="nav-shop" style="display: flex; align-items: center; justify-content: space-between;">
+                            <li class="nav-item" style="margin-right: 10px;">
+                                <form action="/home/Shop" method="post">
                                     <div class="input-group">
-
-                                        <span class="input-group-text" id="basic-addon2">
-                                            <input type="text" name="sortOrder" class="form-control" placeholder="Search" aria-label="Recipient's username" aria-describedby="basic-addon2">
-
-                                            <input type="submit" value="Search">
-
-                                        </span>
-
+                                        <input type="text" name="sortOrder" class="form-control" placeholder="Search" aria-label="Recipient's username" aria-describedby="basic-addon2">
+                                        <div class="input-group-append">
+                                            <input type="submit" value="Search" class="btn btn-outline-secondary">
+                                        </div>
                                     </div>
+                                    <input name="__RequestVerificationToken" type="hidden" value="CfDJ8CnR_TcGempMiDo_giSawHBHDIQQzoKN8iv-INfhDVVg9-UkdZadOhYA_UGkaMWJjsRCjlEqQov5oiwqnviDeixyKxyI3YMUwa0bjfBtEi5csLE89F2RRy83vsBrcYqy7Jee6YmUfvcAHTAYO8KDeDw">
                                 </form>
                             </li>
+                            @*                             <li class="nav-item">
+                            <a style="color: black;" href="/Cart/ViewCart">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
+                            <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"></path>
+                            </svg>
 
+                            <span class="nav-shop__circle">0</span>
+
+
+                            </a>
+                            </li> *@
                             <li class="nav-item">
-                                <a style="color:black" href="~/Cart/ViewCart">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
-                                        <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
-                                    </svg>
+                                <a href="/Cart/ViewCart">
+                                    <button class="nav-cart-button">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
+                                            <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"></path>
+                                        </svg>
+                                        @{
+                                            var procarrt = SessionService.GetObjFromSession(Context.Session, "Cart");
+                                            if (procarrt!=null)
+                                            {
+                                                <span id="cart-count" class="nav-shop__circle"> @procarrt.Count.ToString()</span>
+                                            }else
+                                            {
+                                                <span id="cart-count" class="nav-shop__circle">0</span>
+                                            }
+                                           
+                                        }
+                                        
+                                    </button>
                                 </a>
-
                             </li>
-
-
-
 
 
                         </ul>
-
-                      
-
-                        <ul class="nav navbar-nav menu_nav">
+                        <ul class="nav navbar-nav menu_nav" style="margin: 0; display: flex; align-items: center; justify-content: flex-end;">
                             <li class="nav-item submenu dropdown">
-                                @if (User.Identity.IsAuthenticated)
-                                {
-                                    var isAdmin = User.IsInRole("Admin");
-                                    var IsStaff = User.IsInRole("Staff");
+                            <li class="nav-item submenu dropdown">
+                                    @if (User.Identity.IsAuthenticated)
+                                    {
+                                        var isAdmin = User.IsInRole("Admin");
+                                        var IsStaff = User.IsInRole("Staff");
                                     <!-- Hiển thị menu cho người dùng đã đăng nhập -->
                                     <a href="#" style="color:black" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
@@ -142,21 +150,22 @@
                                                 LogOut
                                             </a>
                                         </li>
-                                        @if (isAdmin|| IsStaff)
-                                        {
+                                            @if (isAdmin || IsStaff)
+                                            {
                                             <li class="nav-item">
                                                 <a class="nav-link" href="~/Admin/Admin">
                                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-fill-gear" viewBox="0 0 16 16">
                                                         <path d="M11 5a3 3 0 1 1-6 0 3 3 0 0 1 6 0Zm-9 8c0 1 1 1 1 1h5.256A4.493 4.493 0 0 1 8 12.5a4.49 4.49 0 0 1 1.544-3.393C9.077 9.038 8.564 9 8 9c-5 0-6 3-6 4Zm9.886-3.54c.18-.613 1.048-.613 1.229 0l.043.148a.64.64 0 0 0 .921.382l.136-.074c.561-.306 1.175.308.87.869l-.075.136a.64.64 0 0 0 .382.92l.149.045c.612.18.612 1.048 0 1.229l-.15.043a.64.64 0 0 0-.38.921l.074.136c.305.561-.309 1.175-.87.87l-.136-.075a.64.64 0 0 0-.92.382l-.045.149c-.18.612-1.048.612-1.229 0l-.043-.15a.64.64 0 0 0-.921-.38l-.136.074c-.561.305-1.175-.309-.87-.87l.075-.136a.64.64 0 0 0-.382-.92l-.148-.045c-.613-.18-.613-1.048 0-1.229l.148-.043a.64.64 0 0 0 .382-.921l-.074-.136c-.306-.561.308-1.175.869-.87l.136.075a.64.64 0 0 0 .92-.382l.045-.148ZM14 12.5a1.5 1.5 0 1 0-3 0 1.5 1.5 0 0 0 3 0Z" />
                                                     </svg>
-                                                    Admin Page</a>
+                                                    Admin Page
+                                                </a>
                                             </li>
-                                        }
+                                            }
                                         <li class="nav-item"><a class="nav-link" asp-action="Thongtin" asp-controller="Home">Thông tin đơn hàng</a></li>
                                     </ul>
-                                }
-                                else
-                                {
+                                    }
+                                    else
+                                    {
                                     <!-- Hiển thị menu cho người dùng chưa đăng nhập -->
                                     <a href="#" style="color:black" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
@@ -175,13 +184,10 @@
 
                                         </li>
                                     </ul>
-                                }
+                                    }
                             </li>
-
+                            </li>
                         </ul>
-
-
-
                     </div>
                 </div>
             </nav>
@@ -295,6 +301,8 @@
     <!--================ End footer Area  =================-->
 
     <script src="~/js/site.js"></script>
+    <!-- Thư viện jQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 
     <script src="~/contentwebb/vendors/jquery/jquery-3.2.1.min.js"></script>
     <script src="~/contentwebb/js/main.js"></script>
@@ -321,8 +329,10 @@
                     window.location.href = '/account/logout';
                 }
             });
+
         });
     </script>
+
     @RenderSection("scripts", false)
 </body>
 </html>
