--- a/APPVIEW/Views/Home/Thongtin.cshtml
+++ b/APPVIEW/Views/Home/Thongtin.cshtml
@@ -9,12 +9,13 @@
     List<Size> size = ViewBag.sizee;
     List<Color> color = ViewBag.Collor;
     List<Image> image = ViewBag.image;
+    List<Voucher> voucher = ViewBag.Voucher;
 }
 
 <h3 style="text-align:center">Đơn hàng của bạn </h3>
 
 @* @foreach (var itembill in bill)
-{
+    {
 
     var userbillct = billct.FirstOrDefault(c => c.BIllId == itembill.id);
     var pct = prdct.FirstOrDefault(c => c.Id == userbillct.ProductDetailID);
@@ -25,85 +26,85 @@
     <div class="row" style="margin-top:100px ; margin-left:150px">
 
 
-        <div class="col-md-6 col-lg-4 col-xl-3">
-            <div class="card text-center card-product">
-                <div class="card-product__img">
-                    <img class="card-img" src="~/contentwebb/img/product/product1.png" alt="">
+    <div class="col-md-6 col-lg-4 col-xl-3">
+    <div class="card text-center card-product">
+    <div class="card-product__img">
+    <img class="card-img" src="~/contentwebb/img/product/product1.png" alt="">
 
-                </div>
-                <div class="card-body" style="text-align:left ; color :black;font-size : 20px">
-                    <p>Mã hóa đơn : @itembill.Code</p>
-                    <span>
-                        Trạng thái : @if (itembill.Status == 1)
-                        {
+    </div>
+    <div class="card-body" style="text-align:left ; color :black;font-size : 20px">
+    <p>Mã hóa đơn : @itembill.Code</p>
+    <span>
+    Trạng thái : @if (itembill.Status == 1)
+    {
 
-                            <span>Chờ xác nhận</span>
-                        }
-                        else if (itembill.Status == 2)
-                        {
-                            <span>Đã xác nhận đơn hàng </span>
-                        }
-                        else if (itembill.Status == 3)
-                        {
-                            <span> Đang giao  </span>
-                        }
-                        else if (itembill.Status == 4)
-                        {
-                            <span>Đã giao </span>
-                        }
-                        else if (itembill.Status == 5)
-                        {
-                            <span>Thanh toán thành công </span>
-                        }
-                        else if (itembill.Status == 6)
-                        {
-                            <span>Thanh toán không thành công </span>
-                        }
-                        else if (itembill.Status == 0)
-                        {
-                            <span>Đơn chờ hủy </span>
-                        }
-
-
+    <span>Chờ xác nhận</span>
+    }
+    else if (itembill.Status == 2)
+    {
+    <span>Đã xác nhận đơn hàng </span>
+    }
+    else if (itembill.Status == 3)
+    {
+    <span> Đang giao  </span>
+    }
+    else if (itembill.Status == 4)
+    {
+    <span>Đã giao </span>
+    }
+    else if (itembill.Status == 5)
+    {
+    <span>Thanh toán thành công </span>
+    }
+    else if (itembill.Status == 6)
+    {
+    <span>Thanh toán không thành công </span>
+    }
+    else if (itembill.Status == 0)
+    {
+    <span>Đơn chờ hủy </span>
+    }
 
 
 
-                    </span>
-                    <p>Tên sản phẩm : @pro.Name </p>
-                    <p>Size : @siz.Name</p>
-                    <p>Màu : @colo.Name</p>
-                    <p>Số lượng : @userbillct.Amount</p>
-                    <p>
-                        Tiền hàng :  @{
-                            var tienhang = itembill.TotalMoney - itembill.ShipFee;
-                            <span>@tienhang</span>
-                        }
-                    </p>
-                    <p>Phí ship  : @itembill.ShipFee</p>
-                    <p>Tổng tiền : @itembill.TotalMoney</p>
-                    <p>Ngày tạo : @itembill.CreateDate</p>
-                    <p>Ngày ship : @itembill.ShipDate</p>
-                    @if (itembill.Status == 1 || itembill.Status == 2)
-
-                    {
-                        <button style="background-color:coral"> @Html.ActionLink("Hủy đơn", "HuyDon", new { id = itembill.id }, new { style = "color:black;" }) </button>
-                    }
-                    @if (itembill.Status == 3)
-
-                    {
-
-                        <button style="background-color:coral"> @Html.ActionLink("Đã nhận hàng", "Nhanhang", new { id = itembill.id }, new { style = "color:black;" }) </button>
 
 
-                    }
+    </span>
+    <p>Tên sản phẩm : @pro.Name </p>
+    <p>Size : @siz.Name</p>
+    <p>Màu : @colo.Name</p>
+    <p>Số lượng : @userbillct.Amount</p>
+    <p>
+    Tiền hàng :  @{
+    var tienhang = itembill.TotalMoney - itembill.ShipFee;
+    <span>@tienhang</span>
+    }
+    </p>
+    <p>Phí ship  : @itembill.ShipFee</p>
+    <p>Tổng tiền : @itembill.TotalMoney</p>
+    <p>Ngày tạo : @itembill.CreateDate</p>
+    <p>Ngày ship : @itembill.ShipDate</p>
+    @if (itembill.Status == 1 || itembill.Status == 2)
 
-                </div>
-            </div>
-        </div>
+    {
+    <button style="background-color:coral"> @Html.ActionLink("Hủy đơn", "HuyDon", new { id = itembill.id }, new { style = "color:black;" }) </button>
+    }
+    @if (itembill.Status == 3)
+
+    {
+
+    <button style="background-color:coral"> @Html.ActionLink("Đã nhận hàng", "Nhanhang", new { id = itembill.id }, new { style = "color:black;" }) </button>
+
+
+    }
+
+    </div>
+    </div>
+    </div>
 
 
     </div>
-} *@
+    } *@
 
 
 
@@ -118,13 +119,13 @@
     var siz = size.FirstOrDefault(c => c.Id == pct.Id_Size);
     var colo = color.FirstOrDefault(c => c.Id == pct.Id_Color);
     var img = image.FirstOrDefault(c => c.IdProductdetail == pct.Id);
-
+    var vouchers = voucher.FirstOrDefault(c => c.Id == itembill.Voucherid);
 
     <body>
         <!--================ Start Header Menu Area =================-->
         <!-- ================ end banner area ================= -->
         <!--================Order Details Area =================-->
-        <section class="order_details section-margin--small">
+    <section class="order_details section-margin--small">
             <div class="container">
 
 
@@ -170,7 +171,35 @@
                                     <td><h4 style="color:black"><hr style="color:black"></h4></td>
                                     <td><h4 style="color:black"><hr style="color:black"></h4></td>
                                 </tr>
-
+                                <tr>
+                                    <td>
+                                        <h4>Voucher</h4>
+                                    </td>
+                                    <td>
+                                        <h5></h5>
+                                    </td>
+                                    <td>
+                                        <h5>
+                                            @if (itembill.Voucherid != null)
+                                            {
+                                                if (vouchers != null)
+                                                {
+                                                    <span>Mã: @vouchers.Code</span> <br></br>
+                                                    <span>Giảm: @vouchers.Value%</span> <br></br>
+                                                    <span>Giảm tối đa: @vouchers.DiscountAmount VND</span>
+                                                }
+                                                else
+                                                {
+                                                    <span>Không có voucher áp dụng</span>
+                                                }
+                                            }
+                                            else
+                                            {
+                                                <span>Không có voucher áp dụng</span>
+                                            }
+                                        </h5>
+                                    </td>
+                                </tr>
                                 <tr>
                                     <td>
                                         <h4>Phí ship</h4>
@@ -244,7 +273,25 @@
                                         <h5></h5>
                                     </td>
                                     <td>
-                                        <h5>@itembill.TotalMoney</h5>
+                                        @if (ViewBag.VoucherAcc != null)
+                                        {
+                                            var priceProd = userbillct.Price;
+                                            var percent = vouchers.Value / 100;
+                                            var priceXpercent = priceProd * percent;
+                                            @if (priceXpercent > vouchers.DiscountAmount)
+                                            {
+                                                itembill.TotalMoney = (float)(priceProd - vouchers.DiscountAmount) + itembill.ShipFee;
+                                            }
+                                            else
+                                            {
+                                                itembill.TotalMoney = (priceProd - priceXpercent) + itembill.ShipFee;
+                                            }
+                                            <h5><span>@itembill.TotalMoney</span></h5>
+                                        }
+                                        else
+                                        {
+                                            <p>@itembill.TotalMoney</p>
+                                        }
                                     </td>
                                 </tr>
                                 <tr>
@@ -276,12 +323,5 @@
             </div>
         </section>
         <!--================End Order Details Area =================-->
-
-
-
-
-
-    </body>
-
-
+</body>
 }
