--- a/APPVIEW/Views/Image/GetList.cshtml
+++ b/APPVIEW/Views/Image/GetList.cshtml
@@ -9,6 +9,9 @@
 
 <p>
     <a asp-action="Create">Create New</a>
+    <form asp-action="Search" method="get" class="form-inline" style="margin-left: 1000px">
+        <input placeholder="Search" type="text" name="searchTerm" id="searchTerm" class="form-control" aria-label="Recipient's username" aria-describedby="basic-addon2" />
+    </form>
 </p>
 <table class="table">
     <thead>
@@ -35,32 +38,33 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.IdProductdetail)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Status)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Create_date)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Update_date)
-            </td>
-            <td>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Id)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.IdProductdetail)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Status)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Create_date)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Update_date)
+                </td>
+                <td>
                     @Html.ActionLink("Edit", "Edit", new {  id=item.Id }) |
                     @Html.ActionLink("Details", "Details", new {  id=item.Id}) |
                     @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-            </td>
-        </tr>
-}
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
