--- a/APPVIEW/Views/Product/GetList.cshtml
+++ b/APPVIEW/Views/Product/GetList.cshtml
@@ -16,7 +16,9 @@
         <a class="btn btn-success waves-effect waves-light" asp-action="Create">
             <span class="mdi mdi-plus-thick">Create new</span>
         </a>
-
+        <form asp-action="Search" method="get" class="form-inline" style="margin-left: 1000px">
+            <input placeholder="Search" type="text" name="searchTerm" id="searchTerm" class="form-control" aria-label="Recipient's username" aria-describedby="basic-addon2" />
+        </form>
         <div class="table-responsive">
             <table class="table table-hover">
                 <thead>
