--- a/APPVIEW/Views/Supplier/GetList.cshtml
+++ b/APPVIEW/Views/Supplier/GetList.cshtml
@@ -5,9 +5,6 @@
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
     int stt = 0;
 }
-<form asp-action="Search" method="get" class="form-inline">
-    <input placeholder="Supplier Search" type="text" name="searchTerm" id="searchTerm" /><button>Tìm</button>
-</form>
 
 <div class="card">
     <div class="card-header">
@@ -17,7 +14,9 @@
         <a class="btn btn-success waves-effect waves-light" asp-action="Create">
             <span class="mdi mdi-plus-thick">Create new</span>
         </a>
-
+        <form asp-action="Search" method="get" class="form-inline" style="margin-left: 1000px">
+            <input placeholder="Search" type="text" name="searchTerm" id="searchTerm" class="form-control" aria-label="Recipient's username" aria-describedby="basic-addon2" />
+        </form>
         <div class="table-responsive">
             <table class="table table-hover">
                 <thead>
