--- a/APPVIEW/Views/Voucher/Create.cshtml
+++ b/APPVIEW/Views/Voucher/Create.cshtml
@@ -43,7 +43,7 @@
                 <input asp-for="DiscountAmount" class="form-control" />
                 <span asp-validation-for="DiscountAmount" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="Create_date" class="control-label"></label>
                 <input asp-for="Create_date" class="form-control" />
                 <span asp-validation-for="Create_date" class="text-danger"></span>
@@ -52,7 +52,7 @@
                 <label asp-for="Update_date" class="control-label"></label>
                 <input asp-for="Update_date" class="form-control" />
                 <span asp-validation-for="Update_date" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <label asp-for="StartDate" class="control-label"></label>
                 <input asp-for="StartDate" class="form-control" />
