--- a/APPVIEW/Views/Home/Checkout.cshtml
+++ b/APPVIEW/Views/Home/Checkout.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewData["Title"] = "Checkout";
     Layout = "~/Views/Shared/_LayoutWeb.cshtml";
-            //int fee = ViewBag.fee;
+    int fee = ViewBag.fee;
 }
 <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
@@ -35,7 +35,7 @@
             <div class="check_title">
                 <h2>Have a coupon? <a href="#">Click here to enter your code</a></h2>
             </div>
-            @*<input type="text" placeholder="Enter coupon code">*@
+            <input type="text" placeholder="Enter coupon code">
             <a class="button button-coupon" asp-action="ApplyDiscount">Apply Coupon</a>
         </div>
         <div class="billing_details">
@@ -122,53 +122,27 @@
                             }
                         </ul>
                         <ul class="list list_2">
-                            <li><a href="#">Subtotal <span>@ViewBag.TT VND</span></a></li>
-                            @if (ViewBag.Value != null)
+                            <li><a href="#">Subtotal <span>$@ViewBag.TT VND</span></a></li>
+                            @if (ViewBag.DiscountAmount != null)
                             {
+                                <a href="javascript:void(0);" onclick="confirmCancelVoucher()" style="color: red; padding-left: 278px"><i class='bx bxs-x-square' type="font-size: 12px"></i></a>
                                 <li>
-                                    <a href="javascript:void(0);" onclick="confirmCancelVoucher()" style="color: red; padding-left: 278px">
-                                        <i class='bx bxs-x-square' style="font-size: 12px"></i>
-                                    </a>
                                     <h6 style="font-size: 14px">Thông tin giảm giá:</h6>
-                                    <p>Mã: <span>@ViewBag.VoucherCode</span></p>
-                                    <p>Giảm: <span>@ViewBag.FirstValue%</span></p>
-                                    <p>Giảm tối đa: <span>@ViewBag.FirstDiscountAmount</span>VND</p>
+                                    <p>Mã giảm giá: <span>@ViewBag.VoucherCode</span></p>
+                                    <p>Số tiền giảm: <span>@ViewBag.DiscountAmount</span>VND</p>
                                 </li>
+
                             }
-                                <li><a href="#">Shipping <span><input style="height:30px; width:50px; border: none; outline: none; background-color:#e8f0f2;" value="@ViewBag.fee" readonly id="feeship">VND</span></a></li>
-
-                           @* @if (ViewBag.fee != null)
+                            <li><a href="#">Shipping <span><input style="height:30px; width:50px; border: none; outline: none; background-color:#e8f0f2;" value="@ViewBag.fee" readonly id="feeship">VND</span></a></li>
+                            @if (ViewBag.DiscountAmount != null)
                             {
-                                <li><a href="#">Shipping <span><input style="height:30px; width:50px; border: none; outline: none; background-color:#e8f0f2;" value="@ViewBag.fee" readonly id="feeship">VND</span></a></li>
-                            }
-                            else
-                            {
-                                 <li><a href="#">Shipping <span>0 VND</span></a></li>
-                            }*@
-                            @if (ViewBag.Value != null)
-                            {
-                                var totall = @ViewBag.TT - @ViewBag.DiscountAmount;
-                                var totalll = @ViewBag.TT - @ViewBag.FirstDiscountAmount;
-                                var fe = @ViewBag.fee;
-
-                                if (ViewBag.DiscountAmount > ViewBag.FirstDiscountAmount)
-                                {
-                                    <li><a href="#">Total <span> <input readonly style="height:30px; width:50px; border: none; outline: none; background-color:#e8f0f2;" value="@( totalll+ViewBag.fee)" id="tShip" /> VND</span></a></li>
-
-                                  
-                                }
-                                else
-                                {
-                                    <li><a href="#">Total <span> <input readonly style="height:30px; width:50px; border: none; outline: none; background-color:#e8f0f2;" value="@( totall+ViewBag.fee)" id="tShip" /> VND</span></a></li>
-                                   
-                                }
+                                <li><a href="#">Total <span> <input style="height:30px; width:50px; border: none; outline: none; background-color:#e8f0f2;" value="@(ViewBag.TT - ViewBag.DiscountAmount+ViewBag.fee)" id="tShip" /> VND</span></a></li>
                             }
                             else
                             {
-                                <li><a href="#">Total <span><input readonly style="height:30px; width:50px; border: none; outline: none; background-color:#e8f0f2;" value="@(ViewBag.TT + ViewBag.fee)" id="tShip" /> VND</span></a></li>
+                                <li><a href="#">Total <span><input style="height:30px; width:50px; border: none; outline: none; background-color:#e8f0f2;" value="@(ViewBag.TT + ViewBag.fee)" id="tShip" /> VND</span></a></li>
                             }
                         </ul>
-                     
                         <div class="payment_item">
                             <div class="radion_btn">
                                 <input type="radio" id="f-option5" name="selector">
@@ -205,7 +179,7 @@
 </section>
 <!--================End Checkout Area =================-->
 <script>
-
+     
     // Lấy tham chiếu đến thẻ select bằng id
     var select = document.getElementById("countrySelect");
     var selectDistrict = document.getElementById("districtSelect");
