--- a/APPVIEW/Views/Role/GetList.cshtml
+++ b/APPVIEW/Views/Role/GetList.cshtml
@@ -6,6 +6,10 @@
     int stt = 0;
 }
 
+<form asp-action="Search" method="get" class="form-inline">
+    <input placeholder="Role Search" type="text" name="searchTerm" id="searchTerm" /><button>Tìm</button>
+</form>
+
 <div class="card">
     <div class="card-header">
         <h5 class="mb-0">Roles</h5>
@@ -14,7 +18,6 @@
         <a class="btn btn-success waves-effect waves-light" asp-action="Create">
             <span class="mdi mdi-plus-thick">Create new</span>
         </a>
-        
         <div class="col-lg-4 col-md-6">
             <small class="text-light fw-medium mb-3">Enable backdrop (default)</small>
             <div class="mt-3">
@@ -53,9 +56,7 @@
                 </div>
             </div>
         </div>
-        <form asp-action="Search" method="get" class="form-inline" style="margin-left: 1000px">
-            <input placeholder="Search" type="text" name="searchTerm" id="searchTerm" class="form-control" aria-label="Recipient's username" aria-describedby="basic-addon2" />
-        </form>
+
         <div class="table-responsive">
             <table class="table table-hover">
                 <thead>
