--- a/APPVIEW/Views/Shared/_LayoutWeb.cshtml
+++ b/APPVIEW/Views/Shared/_LayoutWeb.cshtml
@@ -27,11 +27,13 @@
     <link rel="stylesheet" href="~/contentwebb/vendors/nice-select/nice-select.css">
     <link rel="stylesheet" href="~/contentwebb/vendors/owl-carousel/owl.theme.default.min.css">
     <link rel="stylesheet" href="~/contentwebb/vendors/owl-carousel/owl.carousel.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@10/dist/sweetalert2.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link href="~/css/sty.css" rel='stylesheet'>
     <link href="~/contentwebb/css/style.css" rel="stylesheet" />
     <link href="~/contentwebb/css/main.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
 
 </head>
 
@@ -304,9 +306,8 @@
     <!--================ End footer Area  =================-->
 
     <script src="~/js/site.js"></script>
-
+    <!-- Thư viện jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10/dist/sweetalert2.min.js"></script>
 
     <script src="~/contentwebb/vendors/jquery/jquery-3.2.1.min.js"></script>
     <script src="~/contentwebb/js/main.js"></script>
@@ -317,7 +318,6 @@
     <script src="~/contentwebb/vendors/jquery.ajaxchimp.min.js"></script>
     <script src="~/contentwebb/vendors/mail-script.js"></script>
     <script src="~/contentwebb/js/main.js"></script>
-    <script src="~/js/sty.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script>
         document.getElementById('logoutButton').addEventListener('click', function () {
