--- a/APPVIEW/Views/Color/GetList.cshtml
+++ b/APPVIEW/Views/Color/GetList.cshtml
@@ -15,7 +15,9 @@
             <span class="mdi mdi-plus-thick"></span>Create new
         </a>
 
-
+        <form asp-action="Search" method="get" class="form-inline" style="margin-left: 1000px">
+            <input placeholder="Search" type="text" name="searchTerm" id="searchTerm" class="form-control" aria-label="Recipient's username" aria-describedby="basic-addon2" />
+        </form>
         <div class="table-responsive">
             <table class="table table-hover table-striped">
                 <thead>
