--- a/APPVIEW/Views/Home/Checkout.cshtml
+++ b/APPVIEW/Views/Home/Checkout.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewData["Title"] = "Checkout";
     Layout = "~/Views/Shared/_LayoutWeb.cshtml";
-    int fee = ViewBag.fee;
+    
 }
 <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
@@ -121,28 +121,52 @@
                                 <li><a href="#">@item.Name<span class="middle">x @item.Quantity</span> <span class="last">@tt VND</span></a></li>
                             }
                         </ul>
-                        <ul class="list list_2">
-                            <li><a href="#">Subtotal <span>$@ViewBag.TT VND</span></a></li>
-                            @if (ViewBag.DiscountAmount != null)
-                            {
-                                <a href="javascript:void(0);" onclick="confirmCancelVoucher()" style="color: red; padding-left: 278px"><i class='bx bxs-x-square' type="font-size: 12px"></i></a>
-                                <li>
-                                    <h6 style="font-size: 14px">Thông tin giảm giá:</h6>
-                                    <p>Mã giảm giá: <span>@ViewBag.VoucherCode</span></p>
-                                    <p>Số tiền giảm: <span>@ViewBag.DiscountAmount</span>VND</p>
-                                </li>
+                     
 
+                    
+                        <ul class="list list_2">
+                            <li><a href="#">Subtotal <span>@ViewBag.TT VND</span></a></li>
+                            @if (ViewBag.Value != null)
+                            {
+                                <li>
+                                    <a href="javascript:void(0);" onclick="confirmCancelVoucher()" style="color: red; padding-left: 278px">
+                                        <i class='bx bxs-x-square' style="font-size: 12px"></i>
+                                    </a>
+                                    <h6 style="font-size: 14px">Thông tin giảm giá:</h6>
+                                    <p>Mã: <span>@ViewBag.VoucherCode</span></p>
+                                    <p>Giảm: <span>@ViewBag.FirstValue%</span></p>
+                                    <p>Giảm tối đa: <span>@ViewBag.FirstDiscountAmount</span>VND</p>
+                                </li>
                             }
                             <li><a href="#">Shipping <span><input style="height:30px; width:50px; border: none; outline: none; background-color:#e8f0f2;" value="@ViewBag.fee" readonly id="feeship">VND</span></a></li>
-                            @if (ViewBag.DiscountAmount != null)
+
+                            @if (ViewBag.Value != null)
                             {
-                                <li><a href="#">Total <span> <input style="height:30px; width:50px; border: none; outline: none; background-color:#e8f0f2;" value="@(ViewBag.TT - ViewBag.DiscountAmount+ViewBag.fee)" id="tShip" /> VND</span></a></li>
+                                var totall = @ViewBag.TT - @ViewBag.DiscountAmount;
+                                var totalll = @ViewBag.TT - @ViewBag.FirstDiscountAmount;
+                                var fe = @ViewBag.fee;
+
+                                if (ViewBag.DiscountAmount > ViewBag.FirstDiscountAmount)
+                                {
+                                    <li><a href="#">Total <span>@totalll VND</span></a></li>
+                                    <li><a href="#">Total <span> <input style="height:30px; width:50px; border: none; outline: none; background-color:#e8f0f2;" value="@(totalll+ViewBag.fee)" id="tShip" /> VND</span></a></li>
+
+                                }
+                                else
+                                {
+                                    <li><a href="#">Total <span> <input style="height:30px; width:50px; border: none; outline: none; background-color:#e8f0f2;" value="@(totall+ViewBag.fee)" id="tShip" /> VND</span></a></li>
+
+                                }
                             }
                             else
                             {
-                                <li><a href="#">Total <span><input style="height:30px; width:50px; border: none; outline: none; background-color:#e8f0f2;" value="@(ViewBag.TT + ViewBag.fee)" id="tShip" /> VND</span></a></li>
+                                <li><a href="#">Total <span> <input style="height:30px; width:50px; border: none; outline: none; background-color:#e8f0f2;" value="@( ViewBag.TT+ViewBag.fee)" id="tShip" /> VND</span></a></li>
+
                             }
                         </ul>
+
+
+
                         <div class="payment_item">
                             <div class="radion_btn">
                                 <input type="radio" id="f-option5" name="selector">
