--- a/APPVIEW/Views/Home/Thongtin.cshtml
+++ b/APPVIEW/Views/Home/Thongtin.cshtml
@@ -9,6 +9,7 @@
     List<Size> size = ViewBag.sizee;
     List<Color> color = ViewBag.Collor;
     List<Image> image = ViewBag.image;
+    List<Voucher> voucher = ViewBag.Voucher;
 }
 
 <h3 style="text-align:center">Đơn hàng của bạn </h3>
@@ -114,7 +115,7 @@
 {
     var userbillct = billct.Where(c => c.BIllId == itembill.id).ToList();
 
-
+    var vouchers = voucher.FirstOrDefault(c => c.Id == itembill.Voucherid);
 
     <body>
         <!--================ Start Header Menu Area =================-->
@@ -139,7 +140,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                  @foreach (var bil in userbillct)
+                                @foreach (var bil in userbillct)
                                 {
 
                                     var pct = prdct.FirstOrDefault(c => c.Id == bil.ProductDetailID);
@@ -147,7 +148,7 @@
                                     var siz = size.FirstOrDefault(c => c.Id == pct.Id_Size);
                                     var colo = color.FirstOrDefault(c => c.Id == pct.Id_Color);
                                     var img = image.FirstOrDefault(c => c.IdProductdetail == pct.Id);
-
+                                   
                                     <tr>
                                         <td>
                                             <img src="~/images/@img.Name" style="width: 100px; height:auto" alt="">
@@ -170,14 +171,42 @@
 
                                     </tr>
     
-    }
+                                }
                                 <tr>
 
                                     <td><h4 style="color:black"><hr style="color:black"></h4></td>
                                     <td><h4 style="color:black"><hr style="color:black"></h4></td>
                                     <td><h4 style="color:black"><hr style="color:black"></h4></td>
                                 </tr>
-
+                                <tr>
+                                    <td>
+                                        <h4>Voucher</h4>
+                                    </td>
+                                    <td>
+                                        <h5></h5>
+                                    </td>
+                                    <td>
+                                        <h5>
+                                            @if (itembill.Voucherid != null)
+                                            {
+                                                if (vouchers != null)
+                                                {
+                                                    <span>Mã: @vouchers.Code</span> <br></br>
+                                                    <span>Giảm: @vouchers.Value%</span> <br></br>
+                                                    <span>Giảm tối đa: @vouchers.DiscountAmount VND</span>
+                                                }
+                                                else
+                                                {
+                                                    <span>Không có voucher áp dụng</span>
+                                                }
+                                            }
+                                            else
+                                            {
+                                                <span>Không có voucher áp dụng</span>
+                                            }
+                                        </h5>
+                                    </td>
+                                </tr>
                                 <tr>
                                     <td>
                                         <h4>Phí ship</h4>
@@ -262,7 +291,25 @@
                                         <h5></h5>
                                     </td>
                                     <td>
-                                        <h5>@itembill.TotalMoney</h5>
+                                        @if (ViewBag.VoucherAcc != null)
+                                        {
+                                            var priceProd = itembill.TotalMoney;
+                                            var percent = vouchers.Value / 100;
+                                            var priceXpercent = priceProd * percent;
+                                            @if (priceXpercent > vouchers.DiscountAmount)
+                                            {
+                                                itembill.TotalMoney = (float)(priceProd - vouchers.DiscountAmount) + itembill.ShipFee;
+                                            }
+                                            else
+                                            {
+                                                itembill.TotalMoney = (priceProd - priceXpercent) + itembill.ShipFee;
+                                            }
+                                            <h5><span>@itembill.TotalMoney</span></h5>
+                                        }
+                                        else
+                                        {
+                                            <p>@itembill.TotalMoney</p>
+                                        }
                                     </td>
                                 </tr>
                                 <tr>
